@@ -1,3 +1,8 @@
+2005-10-28  Johan Dahlin  <johan@gnome.org>
+
+	* gobject/pygobject.c: (pygobject_new_with_interfaces):
+	Backport reference count and threadsafe fixes from the 2.8 branch.
+
 2005-09-06  Johan Dahlin  <jdahlin@async.com.br>
 
 	* configure.in: Post release version bump
